--- a/ValgfagProjektApp/styles.css
+++ b/ValgfagProjektApp/styles.css
@@ -1,1 +1,6 @@
-/* CSS file placeholder. */
+#greeting {
+  background-color: #F8F8F8;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  margin: 15px;
+}
