--- a/ValgfagProjektApp/styles.css
+++ b/ValgfagProjektApp/styles.css
@@ -1,6 +1,14 @@
-#greeting {
-  background-color: #F8F8F8;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
-  margin: 15px;
+body {
+      position: relative; 
+  }
+#section1 {padding-top:50px;height:100%;color: #fff; background-color: #1E88E5;}
+#section2 {padding-top:50px;height:100%;color: #fff; background-color: #673ab7;}
+#section3 {padding-top:50px;height:100%;}
+
+html, body {
+    height:100%;
+}
+
+.container {
+    height:100%;
 }
